-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.1
-
None
-
05bd88bdd86b8204623ef4719cbe244d391edeac
Snippet of the corrupt Makefile:
####### Install install_target: first FORCE @test -d $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib || mkdir -p $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib -$(INSTALL_FILE) /private/tmp/qt5-20160610-71530-2j9uu7/qt-everywhere-opensource-src-5.6.1/qtbase/lib/QtCore.framework.dSYM/Contents/Resources/DWARF/QtCore $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib/QtCore@test -d "`dirname $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib/QtCore.framework/Versions/5/$(TARGET)`" || mkdir -p "`dirname $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib/QtCore.framework/Versions/5/$(TARGET)`" -$(INSTALL_PROGRAM) ../../lib/QtCore.framework/Versions/5/$(TARGET) $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib/QtCore.framework/Versions/5/$(TARGET) @test -d "`dirname $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib/QtCore.framework/$(TARGET)`" || mkdir -p "`dirname $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib/QtCore.framework/$(TARGET)`" -$(DEL_FILE) $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib/QtCore.framework/$(TARGET) -$(INSTALL_DIR) ../../lib/QtCore.framework/$(TARGET) $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib/QtCore.framework/$(TARGET) @test -d "`dirname $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib/QtCore.framework/Versions/5/Resources/Info.plist`" || mkdir -p "`dirname $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib/QtCore.framework/Versions/5/Resources/Info.plist`" -$(DEL_FILE) $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib/QtCore.framework/Versions/5/Resources/Info.plist -$(INSTALL_DIR) ../../lib/QtCore.framework/Versions/5/Resources/Info.plist $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib/QtCore.framework/Versions/5/Resources/Info.plist @test -d "`dirname $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib/QtCore.framework/Versions/5/Headers/qabstractanimation.h`" || mkdir -p "`dirname $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib/QtCore.framework/Versions/5/Headers/qabstractanimation.h`" -$(DEL_FILE) $(INSTALL_ROOT)/usr/local/Cellar/qt5/5.6.1/lib/QtCore.framework/Versions/5/Headers/qabstractanimation.h
Note how the INSTALL_FILE and test commands are not properly separated by a \n\t.
- relates to
-
QTBUG-54036 -separate-debug-info silently fails to install dSYM bundles on Apple platforms
-
- Closed
-