Fix an issue causing qmake to generate corrupt Makefiles.

This resolves an issue where qmake would generate a Makefile with an
install command immediately followed by a test command, with no
intermediary newline and tab to separate them.

Task-number: QTBUG-54035
Change-Id: I7f9226f25e92b49ce689d252e9c4a58b877f2972
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@theqtcompany.com>

cregit: 05bd88bdd86b8204623ef4719cbe244d391edeac https://github.com/qt/qtbase/commit/05bd88bdd86b8204623ef4719cbe244d391edeac